--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "hector-subgraph",
+  "name": "Fantom-DAO-V4",
   "license": "UNLICENSED",
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ wkich/hector-subgraph",
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ jay6404/Fantom-DAO-V4",
     "create-local": "graph create --node http://localhost:8020/ wkich/hector-subgraph",
     "remove-local": "graph remove --node http://localhost:8020/ wkich/hector-subgraph",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 wkich/hector-subgraph"
